--- a/game.html
+++ b/game.html
@@ -74,20 +74,20 @@
       right: calc(30% - 250px);
     }
 
-    /* .dino {
+    .dino {
       width: 50px;
       height: 50px;
       object-fit: contain;
       background-size: cover;
       animation: dino-walk 0.2s infinite;
-    } */
-     .dino {
+    }
+    /* .dino {
       width: 88px;
       height: 94px;
       background-image: url('sprite.png');
       animation: dinoWalk 0.2s steps(2) infinite;
       background-position: -36px -36px; /* Ganti sesuai gaya */
-    }
+    /* }  */
 
     .vertical-caption {
       position: absolute;
@@ -121,19 +121,19 @@
 
     @keyframes dino-walk {
       0% {
-        background-image: url('2.png');
+        background-image: url('assets/dino-normal/2.png');
       }
 
       33% {
-        background-image: url('3.png');
+        background-image: url('assets/dino-normal/3.png');
       }
 
       66% {
-        background-image: url('4.png');
+        background-image: url('assets/dino-normal/4.png');
       }
 
       99% {
-        background-image: url('2.png');
+        background-image: url('assets/dino-normal/2.png');
       }
     }
   </style>
