--- a/dino-aw.html
+++ b/dino-aw.html
@@ -75,14 +75,14 @@
         }
 
         .dino {
-            width: 48px;
-            height: 48px;
-            background-image: url('assets/dino-aw/male/cole/base/move.png');
+            width: 72px;
+            height: 72px;
+            background-image: url('assets/dino-aw/female/cole/base/move.png');
             background-repeat: no-repeat;
-            background-size: 288px 48px;
-            /* dikali 2 dari 144x24 */
+            background-size: 432px 72px;
+            /* 144 * 3 dan 24 * 3 */
             image-rendering: pixelated;
-            animation: dino-walk 0.3s steps(6) infinite;
+            animation: dino-walk 0.2s steps(6) infinite;
             background-position: 0 0;
         }
 
@@ -127,7 +127,7 @@
             }
 
             to {
-                background-position: -288px 0;
+                background-position: -432px 0;
             }
         }
     </style>
